// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortableListItem should render successfully 1`] = `
<div>
  <article
    class="css-jg0czf"
    data-test-id="cf-ui-card"
  >
    <div
      class="css-11p49tw"
      data-test-id="cf-ui-drag-handle"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="css-en3na7"
        data-test-id="cf-ui-icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
      <span
        class="css-1b512s9"
      >
        Reorder entry
      </span>
    </div>
    <div
      class="css-1cjnmwb"
      data-card-part="wrapper"
    >
      <div
        class="css-161cbg"
        data-card-part="content"
      >
        <div
          class="css-k008qs"
        >
          <section
            class="css-ijlwe4"
          >
            <h1
              class="css-19gqs9u"
              data-test-id="cf-ui-heading"
            >
              Mock Product
            </h1>
            <h3
              class="css-1dno5oq"
              data-test-id="cf-ui-subheading"
            >
              123
            </h3>
          </section>
        </div>
        <div
          class="css-mfolfb"
        >
          <button
            aria-label="Delete"
            class="css-zob9g7"
            data-test-id="cf-ui-icon-button"
            type="button"
          >
            <span
              class="css-k008qs"
            >
              <svg
                aria-hidden="true"
                class="css-1jrff5x"
                data-test-id="cf-ui-icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`SortableListItem should render successfully the error variation for missing slug 1`] = `
<div>
  <article
    class="css-jg0czf"
    data-test-id="cf-ui-card"
  >
    <div
      class="css-11p49tw"
      data-test-id="cf-ui-drag-handle"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="css-en3na7"
        data-test-id="cf-ui-icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
      <span
        class="css-1b512s9"
      >
        Reorder entry
      </span>
    </div>
    <div
      class="css-1cjnmwb"
      data-card-part="wrapper"
    >
      <div
        class="css-161cbg"
        data-card-part="content"
      >
        <div
          class="css-k008qs"
        >
          <section
            class="css-ijlwe4"
          >
            <h1
              class="css-1t11k68"
              data-test-id="cf-ui-heading"
            >
              123
            </h1>
            
          </section>
        </div>
        <div
          class="css-mfolfb"
        >
          <button
            aria-label="Delete"
            class="css-zob9g7"
            data-test-id="cf-ui-icon-button"
            type="button"
          >
            <span
              class="css-k008qs"
            >
              <svg
                aria-hidden="true"
                class="css-1jrff5x"
                data-test-id="cf-ui-icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </article>
</div>
`;
